[package]
name = "lake-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix = "0.13.0"
actix-web = "4"

postgres = "0.19.2"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"

num-bigint = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

websocket = "0.26.4"

hex = "0.4"
web3 = "0.17.0"

tokio = { version= "1", features = ["full"] }
hex-literal = "0.3"