[package]
name = "lake-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4"
actix = "0.13.0"
awc = "3.0.0"

diesel = { version = "1.4.8", features = ["postgres", "extras", "r2d2"] }
dotenv = "0.15.0"

num-bigint = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

hex = "0.4"
web3 = "0.17.0"

tokio = { version= "1", features = ["full"] }
hex-literal = "0.3"
