[package]
name = "lake-scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4"
actix = "0.13.0"

diesel = { version = "1.4.8", features = ["postgres", "extras", "r2d2"] }

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tokio = { version= "1", features = ["full"] }

dotenv = "0.15.0"
env_logger = "0.9.0"
